--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,24 @@ li{
   }
   }
 
+  .container {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+  }
+.container {
+    padding: 60px 15px 0;
+  }
+
+
+
+
+
+
+
+
+
+
 
 
 
